--- a/#src/about.html
+++ b/#src/about.html
@@ -17,7 +17,12 @@
     @@include('components/header-white.html')
 
     <main>
-        @@include('components/pageTitle.html', {"title":"Aducem calitatea la serbarile voastre", "image":"title-image.jpg",})
+        @@include('components/pageTitle.html', {
+            "title":"Aducem calitatea la serbarile voastre", 
+            "image":"title-image.jpg",
+        })
+
+        
     </main>
 
     @@include('components/footer.html')
