--- a/Calarasi/about.html
+++ b/Calarasi/about.html
@@ -58,7 +58,7 @@
 
 
     <main>
-        <div class="page-title" style="background: url('img/title-image.jpg') 50% 50% / cover no-repeat;">
+        <div class="page-title @@extraclass" style="background: url('img/title-image.jpg') 50% 50% / cover no-repeat;">
     <div class="container">
         <h1>Aducem calitatea la serbarile voastre</h1>
     </div>
