--- a/#src/performance.html
+++ b/#src/performance.html
@@ -33,13 +33,69 @@
                             </p>
                             <a href="#">
                                 Read More
-                                <svg width="10" height="10" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <svg width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M2 1.71515L2.91003 1L8 5L2.91003 9L2 8.28485L6.17995 5L2 1.71515Z" fill="black"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="performance-body__item performance-item">
+                        <img src="img/medal2.png" alt="award" class="performance-item__image">
+                        <div class="performance-item__description">
+                            <p>
+                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a.  venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
+                            </p>
+                            <a href="#">
+                                Read More
+                                <svg width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M2 1.71515L2.91003 1L8 5L2.91003 9L2 8.28485L6.17995 5L2 1.71515Z" fill="black"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="performance-body__item performance-item">
+                        <img src="img/medal3.png" alt="award" class="performance-item__image">
+                        <div class="performance-item__description">
+                            <p>
+                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a.  venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
+                            </p>
+                            <a href="#">
+                                Read More
+                                <svg width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M2 1.71515L2.91003 1L8 5L2.91003 9L2 8.28485L6.17995 5L2 1.71515Z" fill="black"/>
+                                </svg>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="performance-body__item performance-item">
+                        <img src="img/medal.png" alt="award" class="performance-item__image">
+                        <div class="performance-item__description">
+                            <p>
+                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a.  venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
+                            </p>
+                            <a href="#">
+                                Read More
+                                <svg width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2 1.71515L2.91003 1L8 5L2.91003 9L2 8.28485L6.17995 5L2 1.71515Z" fill="black"/>
                                 </svg>
                             </a>
                         </div>
                     </div>
                 </div>
+
+                <button class="load-more">
+                    Load More
+                    <svg width="19" height="15" viewBox="0 0 19 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0)">
+                            <path d="M3.06385 7.70625L1.6626 8.8125L9.5001 15L17.3376 8.8125L15.9363 7.70625L9.5001 12.7875L3.06385 7.70625Z" fill="#423831"/>
+                        </g>
+                        <defs>
+                            <clipPath id="clip0">
+                                <rect width="15" height="19" fill="white" transform="translate(0 15) rotate(-90)"/>
+                            </clipPath>
+                        </defs>
+                    </svg>
+                </button>
             </div>
         </div>
     </main>
