--- a/Calarasi/about.html
+++ b/Calarasi/about.html
@@ -6,9 +6,10 @@
     <title>Calarasi - About</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.css" integrity="sha512-hSeEAanQ2Sh6YpHdLthlagf8R8v081TtNJX4oCxNXxwIAGOHKdzOnl270Dxrn/WHZRdwowpumZEwS16WjIi2Hw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.css" integrity="sha512-hSeEAanQ2Sh6YpHdLthlagf8R8v081TtNJX4oCxNXxwIAGOHKdzOnl270Dxrn/WHZRdwowpumZEwS16WjIi2Hw==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.min.css">
 
 </head>
@@ -64,7 +65,179 @@
     </div>
 </div>
 
-        
+        <section class="about-section">
+            <div class="container">
+                <div class="about-section__header section-header">
+                    <h2>Despre noi</h2>
+                    <p>
+                        Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. . Laborum
+                        magna nulla duis ullamco cillum dolor. Voluptate exercitation aliquip deserunt reprehenderit elit laborum.
+                    </p>
+                </div>
+                <div class="about-section__body">
+                    <div class="about-section__item">
+                        <h3>1896</h3>
+                        <p>Este fondată fabrica de vinuri si divinuri Călărași Divin</p>
+                    </div>
+                    <div class="about-section__item">
+                        <h3>600+ ha</h3>
+                        <p>Suprafața plantațiilor de viță de vie este de cca 600 ha, pe care se cultivă 10 soiuri de struguri</p>
+                    </div>
+                    <div class="about-section__item">
+                        <h3>30+</h3>
+                        <p>Peste 30 de filiale Calarasi-Divin deschise in RM</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <div class="about-description">
+            <div class="container">
+                <div class="about-description__body">
+                    <div class="about-description__item">
+                        <img src="img/process.jpg" alt="#">
+                        <div class="about-description__text">
+                            <p>
+                                Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip
+                                deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat
+                                irure magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt.
+                                <em>Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. Aliqua id fugiat nostrud irure ex duis ea quis id quis ad et. Sunt qui esse pariatur duis deserunt mollit dolore cillum minim tempor enim. </em>                                Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis
+                                ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="about-description__item">
+                        <img src="img/process.jpg" alt="#">
+                        <div class="about-description__text">
+                            <p>
+                                Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate
+                                exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat
+                            </p>
+                            <p>
+                                Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum.co cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure.
+                                Laborum magna nulla duis ullamco cillum dolor.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <section class="history">
+            <div class="container">
+                <div class="history__header section-header">
+                    <h2>Our history</h2>
+                    <p>
+                        Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. . Laborum
+                        magna nulla duis ullamco cillum dolor. Voluptate exercitation aliquip deserunt reprehenderit elit laborum.
+                    </p>
+                </div>
+            </div>
+            <div class="page__history-slider history-slider">
+                <div class="history-slider__body">
+                    <div class="history-slider__slider">
+                        <div class="slider-history__body swiper">
+                            <div class="slider-history__slide">
+                                <div class="slide-text">
+                                    <h3>1896</h3>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                                </div>
+                                <div class="separator"></div>
+                            </div>
+                            <div class="slider-history__slide">
+                                <div class="slide-text">
+                                    <h3>1900</h3>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                                </div>
+                                <div class="separator"></div>
+                            </div>
+                            <div class="slider-history__slide">
+                                <div class="slide-text">
+                                    <h3>2000</h3>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                                </div>
+                                <div class="separator"></div>
+                            </div>
+                            <div class="slider-history__slide">
+                                <div class="slide-text">
+                                    <h3>2020</h3>
+                                    <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.</p>
+                                </div>
+                                <div class="separator"></div>
+                            </div>
+                        </div>
+                        <div class="slider-history-controls">
+                            <div class="slider-history-controls__arrows slider-arrows">
+                                <button type="button" class="slider-arrow slider-arrow__next">
+                                    <svg width="35" height="35" viewBox="0 0 25 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <g clip-path="url(#clip0)">
+                                            <path d="M18.0778 21L19.3816 19.9084L8.21749 10.5L19.3816 1.09155L18.0778 -9.5742e-08L5.6185 10.5L18.0778 21Z" fill="#423831"/>
+                                        </g>
+                                        <defs>
+                                            <clipPath id="clip0">
+                                                <rect width="25" height="21" fill="white" transform="translate(25 21) rotate(-180)"/>
+                                            </clipPath>
+                                        </defs>
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="awards-section">
+    <div class="container">
+        <div class="awards-section__header">
+            <h2>Our awards</h2>
+        </div>
+        <div class="awards-section__body">
+            <div class="awards-section__item">
+                <a href="#">
+                    <img src="../img/medal.png" alt="award">
+                </a>
+            </div>
+            <div class="awards-section__item">
+                <a href="#">
+                    <img src="../img/medal2.png" alt="award">
+                </a>
+            </div>
+            <div class="awards-section__item">
+                <a href="#">
+                    <img src="../img/medal3.png" alt="award">
+                </a>
+            </div>
+            <div class="awards-section__item">
+                <a href="#">
+                    <img src="../img/medal.png" alt="award">
+                </a>
+            </div>
+            <div class="awards-section__item">
+                <a href="#">
+                    <img src="../img/medal2.png" alt="award">
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
+        <div class="about-mini">
+            <div class="container">
+                <div class="about-mini__body">
+                    <img src="img/about-mini.jpg" alt="about">
+
+                    <div class="about-mini__description">
+                        <p>
+                            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                            officia consequat duis enim velit mollit.
+                        </p>
+                        <p>Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </main>
 
     <footer class="footer" data-aos="fade-up" data-aos-duration="2000">
