--- a/#src/performance-single.html
+++ b/#src/performance-single.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Calarasi - Collection</title>
+    <title>Calarasi - Single Performance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
@@ -18,12 +18,12 @@
     @@include('components/header-white.html')
 
     <main>
-        <h1 class="collection-title">Legenda</h1>
+        <h1 class="collection-title">IWSC Bronze 2021</h1>
 
         <div class="collection-hero">
             <div class="container">
                 <div class="collection-hero__body">
-                    <img src="img/products.jpg" alt="collection" class="collection-hero__image">
+                    <img src="img/performance.png" alt="collection" class="collection-hero__image">
                     <div class="collection-hero__info collection-info">
                         <p>
                             Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
@@ -31,18 +31,21 @@
                         </p>
 
                         <div class="collection-info__block">
-                            <h5>Premii castigate:</h5>
-                            <ul class="collection-info__list">
-                                <li class="collection-info__item">IWSC</li>
-                                <li class="collection-info__item">IWSC</li>
-                            </ul>
+                            <h5>Eveniment: <span>IWSC 2021</span></h5>
                         </div>
                         <div class="collection-info__block">
-                            <h5>Varste:</h5>
+                            <h5>Anul: <span> 2021</span></h5>
+                        </div>
+                        <div class="collection-info__block">
+                            <h5>Locatia: <span>Londra</span></h5>
+                        </div>
+
+                        <div class="collection-info__block">
+                            <h5>Winner:</h5>
                             <ul class="collection-info__list">
-                                <li class="collection-info__item">10 ani</li>
-                                <li class="collection-info__item">7 ani</li>
-                                <li class="collection-info__item">5 ani</li>
+                                <li class="collection-info__item">Special collection 10 ani</li>
+                                <li class="collection-info__item">Special collection 7 ani</li>
+                                <li class="collection-info__item">Special collection 5 ani</li>
                             </ul>
                         </div>
 
@@ -79,7 +82,7 @@
         </div>
 
         <div class="page__product-slider product-slider">
-            <h2 class="product-slider__title">Produsele colectiei</h2>
+            <h2 class="product-slider__title">Award Winner</h2>
             <div class="product-slider__body">
                 <div class="product-slider__slider product-container">
                     <div class="slider-product__body swiper">
