--- a/#src/technology.html
+++ b/#src/technology.html
@@ -6,9 +6,10 @@
     <title>Calarasi - Performance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.css" integrity="sha512-hSeEAanQ2Sh6YpHdLthlagf8R8v081TtNJX4oCxNXxwIAGOHKdzOnl270Dxrn/WHZRdwowpumZEwS16WjIi2Hw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.css" integrity="sha512-hSeEAanQ2Sh6YpHdLthlagf8R8v081TtNJX4oCxNXxwIAGOHKdzOnl270Dxrn/WHZRdwowpumZEwS16WjIi2Hw==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.min.css">
 
 </head>
@@ -17,10 +18,7 @@
     @@include('components/header-white.html')
 
     <main>
-        @@include('components/pageTitle.html', {
-            "title":"We look after our plantations with the utmost care", 
-            "image":"title-image.jpg",
-        })
+        @@include('components/pageTitle.html', { "title":"We look after our plantations with the utmost care", "image":"title-image.jpg", })
 
         <div class="horizontal-wrapper">
             <div class="horizontal-wrapper__menu">
@@ -33,31 +31,111 @@
                     <li class="menu-list__item"><a href="#" class="menu-list__link">Turnarea in sticle</a></li>
                 </ul>
             </div>
-            <div class="horizontal-content">
-                <div class="cos">
-                    <div class="horizontal-content__hero" style="background: url('img/plantatii.jpg') 50% 50% / cover no-repeat;">
-                        <h2>Plantatii</h2>
-                    </div>
-                    <div class="horizontal-content__hero" style="background: url('img/plantatii.jpg') 50% 50% / cover no-repeat;">
-                        <h2>Plantatii</h2>
-                    </div>
-                    <div class="horizontal-content__hero" style="background: url('img/plantatii.jpg') 50% 50% / cover no-repeat;">
-                        <h2>Plantatii</h2>
-                    </div>
-                    <div class="horizontal-content__hero" style="background: url('img/plantatii.jpg') 50% 50% / cover no-repeat;">
-                        <h2>Plantatii</h2>
-                    </div>
-                    <div class="horizontal-content__hero" style="background: url('img/plantatii.jpg') 50% 50% / cover no-repeat;">
-                        <h2>Plantatii</h2>
+
+            <!-- <div class="page__horizontal-slider horizontal-slider">
+                <div class="horizontal-slider__body">
+                    <div class="horizontal-slider__slider">
+                        <div class="slider-horizontal__body swiper">
+                            <div class="slider-horizontal__slide">
+                                <div class="slider-horizontal__image" style="background: url('img/plantatii.jpg') 50% 50% / cover no-repeat;">
+                                    <h2>Plantatii</h2>
+                                </div>
+                            </div>
+
+                            <div class="slider-horizontal__slide">
+                                <div class="slider-horizontal__content horizontal-content">
+                                    <div class="horizontal-content__item">
+                                        <img src="img/horizontal-item1.jpg" alt="item">
+                                        <div class="horizontal-content__text">
+                                            <h4>Lorem ipsum dolor</h4>
+                                            <p>
+                                                Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor. Nulla Lorem mollit cupidatat irure. Laborum
+                                            </p>
+                                            <p>
+                                                magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="horizontal-content__item">
+                                        <img src="img/horizontal-item1.jpg" alt="item">
+                                        <div class="horizontal-content__text">
+                                            <h4>Lorem ipsum dolor</h4>
+                                            <p>
+                                                Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor. Nulla Lorem mollit cupidatat irure. Laborum
+                                                magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="horizontal-content__item horizontal-item">
+                                        <img src="img/horizontal-item1.jpg" alt="item">
+                                        <div class="horizontal-content__text">
+                                            <h4>Lorem ipsum dolor</h4>
+                                            <p>
+                                                Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor. Nulla Lorem mollit cupidatat irure. Laborum
+                                            </p>
+                                            <p>
+                                                magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="slider-horizontal__slide">
+                                <div class="slider-horizontal__image" style="background: url('img/plantatii.jpg') 50% 50% / cover no-repeat;">
+                                    <h2>Distilare</h2>
+                                </div>
+                            </div>
+
+                            <div class="slider-horizontal__slide">
+                                <div class="slider-horizontal__content horizontal-content">
+                                    <div class="horizontal-content__item">
+                                        <img src="img/horizontal-item1.jpg" alt="item">
+                                        <div class="horizontal-content__text">
+                                            <h4>Lorem ipsum dolor</h4>
+                                            <p>
+                                                Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor. Nulla Lorem mollit cupidatat irure. Laborum
+                                            </p>
+                                            <p>
+                                                magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="horizontal-content__item">
+                                        <img src="img/horizontal-item1.jpg" alt="item">
+                                        <div class="horizontal-content__text">
+                                            <h4>Lorem ipsum dolor</h4>
+                                            <p>
+                                                Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor. Nulla Lorem mollit cupidatat irure. Laborum
+                                                magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor.
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="horizontal-content__item horizontal-item">
+                                        <img src="img/horizontal-item1.jpg" alt="item">
+                                        <div class="horizontal-content__text">
+                                            <h4>Lorem ipsum dolor</h4>
+                                            <p>
+                                                Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor. Nulla Lorem mollit cupidatat irure. Laborum
+                                            </p>
+                                            <p>
+                                                magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Laborum magna nulla duis ullamco cillum dolor.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
-        
+
     </main>
 
     @@include('components/footer.html')
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.js" integrity="sha512-fRxU3fhg7jWn77+UqkAPkNmnpFAA0IwxT8nysPJ2++WcE0jvaTe7OxC5OH1wiA/grOqgeZreu35nMK/S0qmdkw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="js/script.js"></script>
 </body>
 
