--- a/#src/blog.html
+++ b/#src/blog.html
@@ -31,7 +31,7 @@
                             <p class="blog-item__excerpt">Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum...</p>
                             <div class="blog-item__meta">
                                 <span class="blog-item__time">22 Iulie 2021</span>
-                                <a href="#" class="blog-item__permalink">Citeste mai mult</a>
+                                <a href="single.html" class="blog-item__permalink">Citeste mai mult</a>
                             </div>
                         </div>
                     </div>
@@ -42,7 +42,7 @@
                             <p class="blog-item__excerpt">Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum...</p>
                             <div class="blog-item__meta">
                                 <span class="blog-item__time">22 Iulie 2021</span>
-                                <a href="#" class="blog-item__permalink">Citeste mai mult</a>
+                                <a href="single.html" class="blog-item__permalink">Citeste mai mult</a>
                             </div>
                         </div>
                     </div>
@@ -53,7 +53,7 @@
                             <p class="blog-item__excerpt">Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum...</p>
                             <div class="blog-item__meta">
                                 <span class="blog-item__time">22 Iulie 2021</span>
-                                <a href="#" class="blog-item__permalink">Citeste mai mult</a>
+                                <a href="single.html" class="blog-item__permalink">Citeste mai mult</a>
                             </div>
                         </div>
                     </div>
@@ -64,7 +64,7 @@
                             <p class="blog-item__excerpt">Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum...</p>
                             <div class="blog-item__meta">
                                 <span class="blog-item__time">22 Iulie 2021</span>
-                                <a href="#" class="blog-item__permalink">Citeste mai mult</a>
+                                <a href="single.html" class="blog-item__permalink">Citeste mai mult</a>
                             </div>
                         </div>
                     </div>
