--- a/#src/performance.html
+++ b/#src/performance.html
@@ -6,9 +6,10 @@
     <title>Calarasi - Performance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.css" integrity="sha512-hSeEAanQ2Sh6YpHdLthlagf8R8v081TtNJX4oCxNXxwIAGOHKdzOnl270Dxrn/WHZRdwowpumZEwS16WjIi2Hw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.8.0/swiper-bundle.min.css" integrity="sha512-hSeEAanQ2Sh6YpHdLthlagf8R8v081TtNJX4oCxNXxwIAGOHKdzOnl270Dxrn/WHZRdwowpumZEwS16WjIi2Hw==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/style.min.css">
 
 </head>
@@ -17,10 +18,7 @@
     @@include('components/header-white.html')
 
     <main>
-        @@include('components/pageTitle.html', {
-            "title":"Our awards are our best advertisment method", 
-            "image":"title-image.jpg",
-        })
+        @@include('components/pageTitle.html', { "title":"Our awards are our best advertisment method", "image":"title-image.jpg", })
 
         <div class="performance">
             <div class="container">
@@ -29,9 +27,11 @@
                         <img src="img/medal.png" alt="award" class="performance-item__image">
                         <div class="performance-item__description">
                             <p>
-                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a.  venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
+                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
+                                nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit
+                                sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
                             </p>
-                            <a href="#">
+                            <a href="performance-single.html">
                                 Read More
                                 <svg width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2 1.71515L2.91003 1L8 5L2.91003 9L2 8.28485L6.17995 5L2 1.71515Z" fill="black"/>
@@ -43,9 +43,11 @@
                         <img src="img/medal2.png" alt="award" class="performance-item__image">
                         <div class="performance-item__description">
                             <p>
-                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a.  venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
+                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
+                                nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit
+                                sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
                             </p>
-                            <a href="#">
+                            <a href="performance-single.html">
                                 Read More
                                 <svg width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2 1.71515L2.91003 1L8 5L2.91003 9L2 8.28485L6.17995 5L2 1.71515Z" fill="black"/>
@@ -57,9 +59,11 @@
                         <img src="img/medal3.png" alt="award" class="performance-item__image">
                         <div class="performance-item__description">
                             <p>
-                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a.  venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
+                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
+                                nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit
+                                sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
                             </p>
-                            <a href="#">
+                            <a href="performance-single.html">
                                 Read More
                                 <svg width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2 1.71515L2.91003 1L8 5L2.91003 9L2 8.28485L6.17995 5L2 1.71515Z" fill="black"/>
@@ -71,9 +75,11 @@
                         <img src="img/medal.png" alt="award" class="performance-item__image">
                         <div class="performance-item__description">
                             <p>
-                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a.  venenatis tincidunt nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
+                                Donec pretium fringilla blandit. Etiam ut accumsan leo. Aliquam id mi quam. Vivamus dictum ut erat nec congue. Etiam facilisis lacus ut arcu vulputate, non pellentesque sem convallis. Proin tempus sapien nisl, nec varius risus tristique a. venenatis tincidunt
+                                nibh, sit amet fringilla augue malesuada a. Mauris a nunc congue, viverra lectus sed, imperdiet quam. Aenean tempor sem sed lorem ultricies lacinia. Sed sit amet tortor nibh. Donec condimentum posuere nunc, et hendrerit
+                                sapien dictum ut. Aliquam congue non purus eu suscipit. Integer eu dui tortor.
                             </p>
-                            <a href="#">
+                            <a href="performance-single.html">
                                 Read More
                                 <svg width="15" height="15" viewBox="0 0 10 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M2 1.71515L2.91003 1L8 5L2.91003 9L2 8.28485L6.17995 5L2 1.71515Z" fill="black"/>
