--- a/#src/contact.html
+++ b/#src/contact.html
@@ -24,9 +24,7 @@
         <div class="contact">
             <div class="container">
                 <div class="contact-form">
-                    <h1 class="contact-title">
-                        Stay tuned for news about our collections
-                    </h1>
+                    <h2 class="contact-title">Stay tuned for news about our collections</h1>
                     <p class="contact-subtitle">
                         Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. Voluptate exercitation incididunt aliquip deserunt reprehenderit elit laborum. Nulla Lorem mollit cupidatat irure. Laborum magna nulla duis ullamco cillum dolor. . Laborum
                         magna nulla duis ullamco cillum dolor. Voluptate exercitation aliquip deserunt reprehenderit elit laborum.
@@ -41,7 +39,7 @@
                             <input type="text" name="pren" class="form-body__input" placeholder="Type your name">
                         </label>
 
-                        <label class="form-body__lable col-1" for="email">
+                        <label class="form-body__lable col-2" for="email">
                             E-mail
                             <input type="email" name="email" class="form-body__input" placeholder="johndoe@example.com">
                         </label>
@@ -55,39 +53,37 @@
                         </label>
 
 
-
                         <label class="form-body__lable" for="num">
                             Phone number
                             <input type="email" name="email" class="form-body__input" value="+373">
                         </label>
 
 
-                        <label class="form-body__lable col-1" for="subject">
+                        <label class="form-body__lable col-2" for="subject">
                             subject
                             <input type="text" name="subject" class="form-body__input" placeholder="Select subject">
                         </label>
 
 
-                        <label for="textarea" class="form-body__lable col-1">
+                        <label for="textarea" class="form-body__lable col-2">
                             message
                             <textarea class="form-body__textarea" name="textarea" cols="30" rows="5" placeholder="Your message here"></textarea>
                         </label>
 
 
-                        <label class="checkbox col-1">
+                        <label class="checkbox col-2">
                             <span class="checkbox__input">
                                 <input type="checkbox" name="checkbox">
                                 <span class="checkbox__control">
                                     <svg width="10" height="9" viewBox="0 0 10 9" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M0.773438 4.81818L3.35076 8L9.02086 1" stroke="#423831" stroke-linecap="round"/>
                                     </svg>
-                                            
                                 </span>
                             </span>
                             <span class="radio__label">I consent to the use of my above data to be able to receive  news and offers from us and consent to the use of web tags to measure interaction with such contents.</span>
                         </label>
 
-                        <label class="checkbox col-1">
+                        <label class="checkbox col-2">
                             <span class="checkbox__input">
                                 <input type="checkbox" name="checkbox">
                                 <span class="checkbox__control">
@@ -98,9 +94,7 @@
                             </span>
                             <span class="radio__label">I agree to the sharing of my data with Barza alba affiliates for analysis purposes.</span>
                         </label>
-                        <button class="brown-btn col-1">
-                            send
-                        </button>
+                        <button class="brown-btn col-2">send</button>
                     </form>
                 </div>
             </div>
@@ -126,7 +120,7 @@
                                 <path id="Path 16" d="M12.7403 18.4036L15.305 15.8389C15.6476 15.4963 16.1867 15.4486 16.5841 15.7258L20.1349 18.2023C20.6454 18.5584 20.7101 19.2894 20.2699 19.7296L19.8836 20.1159C19.1734 20.8261 18.1542 21.1338 17.1981 20.826C15.1331 20.1613 11.3762 18.6179 8.26127 15.503C5.1463 12.388 3.60292 8.63109 2.93822 6.56614C2.63044 5.60999 2.9381 4.59084 3.64837 3.88058L4.03463 3.49432C4.4748 3.05415 5.20585 3.11879 5.56195 3.62937L8.0384 7.18011C8.31561 7.57758 8.26795 8.11661 7.92529 8.45927L5.36064 11.0239" stroke="black" stroke-linecap="round"/>
                                 </g>
                             </svg>
-                            <p class="contact-item__text">+373 67381183</p>
+                            <a href="tel:+37367381183" class="contact-item__text">+373 67 381 183</a>
                         </div>
                         <div class="block-contacts__item">
                             <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
