--- a/Calarasi/single.html
+++ b/Calarasi/single.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="header white">
+    <header class="header white" id="header">
     <div class="header__container">
         <div class="header__logo">
             <a href="/">
@@ -26,11 +26,11 @@
         <nav class="navbar">
             <ul class="navbar__menu">
                 <li class="menu__item active"><a href="../about.html" class="menu__link">Despre Noi</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Tehnologie</a></li>
+                <li class="menu__item"><a href="../technology.html" class="menu__link">Tehnologie</a></li>
                 <li class="menu__item"><a href="../performance.html" class="menu__link">Performanta</a></li>
                 <li class="menu__item"><a href="../blog.html" class="menu__link">Noutati</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Produse</a></li>
-                <li class="menu__item"><a href="#" class="menu__link">Degustare</a></li>
+                <li class="menu__item"><a href="../product-single.html" class="menu__link">Produse</a></li>
+                <li class="menu__item"><a href="../taste.html" class="menu__link">Degustare</a></li>
                 <li class="menu__item"><a href="../contact.html" class="menu__link">Contacte</a></li>
             </ul>
         </nav>
